syntax = "proto3";

option go_package = "github.com/keshavbansal015/treebeard/api/oramnode";

package oramnode;

service OramNode {
    rpc ReadPath (ReadPathRequest) returns (ReadPathReply) {}
    rpc JoinRaftVoter (JoinRaftVoterRequest) returns (JoinRaftVoterReply) {}
}

message BlockRequest {
    string block = 1;
    int32 path = 2;
}

message ReadPathRequest {
    repeated BlockRequest requests = 1;
    int32 storage_id = 3;
}

message BlockResponse {
    string block = 1;
    string value = 2;
}

message ReadPathReply {
    repeated BlockResponse responses = 1;
}

message JoinRaftVoterRequest {
    int32 node_id = 1;
    string node_addr = 2;
}

message JoinRaftVoterReply {
    bool success = 1;
}